United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6981773 incorrect fill value with OptimizeFill
6981773 : incorrect fill value with OptimizeFill

Details
Type:
Bug
Submit Date:
2010-09-02
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The sparc assembly for the new fill logic doesn't fully initialize the value register in some paths resulting in incorrectly filled arrays.  There are several nightly failures from this:

  nsk/logging/XMLFormatter/format/format001
  nsk/logging/XMLFormatter/format/format002
  java/util/Arrays/Sorting.java
  java/util/ResourceBundle/Control/XMLResourceBundleTest.java

The fix is to initialize the value slightly earlier.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/f353275af40e
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/hsx/hsx19/baseline/rev/5b0eb275c3d0
                                     
2010-10-08
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/f353275af40e
                                     
2010-09-28
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/f353275af40e
                                     
2010-09-03
EVALUATION

6981773: incorrect fill value with OptimizeFill
Reviewed-by: kvn, twisti

The sparc assembly for the new fill logic doesn't fully initialize the
value register in the check_fill_8_bytes path resulting in
incorrectly filled arrays for certain lengths.  Tested with failing
tests from nightly.
                                     
2010-09-03



Hardware and Software, Engineered to Work Together