6981773: incorrect fill value with OptimizeFill

Reviewed-by: kvn, twisti